--- a/css/screen.css
+++ b/css/screen.css
@@ -2744,6 +2744,21 @@ footer .l-footer .section__footer--right .btn--footer {
     max-width: 59%;
     top: -1.8rem;
   }
+  .m-wrap.realisation .backimage2 > img {
+    max-width: 100%;
+    margin-top: 9.4rem;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    bottom: 10.5rem;
+  }
+  .m-wrap.realisation .backimage-second2left > img {
+    top: 29rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 20rem;
+    left: 1.3rem;
+    width: 72%;
+  }
 }
 @media screen and (min-width: 799px) {
   .m-wrap.realisation .backimage > img {
@@ -3005,7 +3020,7 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-top: 34.9rem;
   }
 }
-/* version Surface Duo 520px xx-s */
+/* version Surface Duo 530px xx-s */
 @media screen and (min-width: 530px) {
   .item-21 {
     grid-column: 1/6;
@@ -3019,7 +3034,6 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-23 {
     grid-column: 5/7;
     grid-row: 2/3;
-    /* margin-bottom: -6.8rem; */
     margin-top: 1rem;
   }
 
@@ -3106,6 +3120,35 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-left: 2.6rem;
     padding-left: 1.4rem;
     z-index: 2;
+  }
+
+  .item-21 {
+    grid-column: 1/6;
+  }
+
+  .item-22 {
+    margin-top: 0.2rem;
+  }
+
+  .item-23 {
+    grid-column: 5/7;
+    grid-row: 1/3;
+  }
+
+  .item-24 {
+    grid-row: 2/4;
+    margin-top: 14.7rem;
+    margin-left: 4rem;
+    grid-column: 5/7;
+  }
+
+  .item-26 {
+    grid-column: 1/3;
+    grid-row: 2/6;
+  }
+
+  .item-27 {
+    grid-column: 4/7;
   }
 }
 /* petit PC portable md-plus 799 */
