--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -142,7 +142,7 @@
     margin-top: 34.9rem;
   }
 }
-/* version Surface Duo 520px xx-s */
+/* version Surface Duo 530px xx-s */
 @media screen and (min-width: break-point(xx-s)){
   .item-21 {
     grid-column: 1/6;
@@ -154,7 +154,6 @@
   .item-23 {
     grid-column: 5/7;
     grid-row: 2/3;
-    /* margin-bottom: -6.8rem; */
     margin-top: 1rem;
   }
   .item-24 {
@@ -172,7 +171,6 @@
   }
 
 }
-
 
 
 /* version petite tablette xs 600px */
@@ -248,6 +246,31 @@
     margin-left: 2.6rem;
     padding-left: 1.4rem;
     z-index: 2;
+  }
+
+  .item-21{
+    grid-column: 1 / 6;
+  }
+  .item-22{
+    margin-top: 0.2rem;
+  }
+
+  .item-23{
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
+  }
+  .item-24{
+    grid-row: 2/4;
+    margin-top: 14.7rem;
+    margin-left: 4rem;
+    grid-column: 5/7;
+  }
+  .item-26 {
+    grid-column: 1/3;
+    grid-row: 2/6;
+  }
+  .item-27 {
+    grid-column: 4/7;
   }
 
 }
