--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -269,7 +269,6 @@
       bottom: 9.5rem;
     }
 
-
     .coverrelatif-ter{
       left: 16rem;
       bottom: -3.1rem;
@@ -281,6 +280,22 @@
       max-width: 59%;
       top: -1.8rem;
     }
+    .backimage2 > img {
+      max-width: 100%;
+      margin-top: 9.4rem;
+    }
+    .coverimage2middle {
+      bottom: 10.5rem;
+    }
+    .backimage-second2left > img {
+      top: 29rem;
+    }
+    .coverrelatif-second2left img {
+      top: 20rem;
+      left: 1.3rem;
+      width: 72%;
+  }
+
   }
 
   /* petit PC portable md-plus 799px */
