--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -347,7 +347,23 @@
 /* petit PC portable lg 1024px */
 @media screen and (min-width: break-point(lg)){
   .item-21 {
-    grid-column: 1/4;
+    grid-column: 1 / 4;
+  }
+  .item-22 {
+    grid-column: 2 / 4;
+  }
+  .item-24 {
+    grid-column: 5 / 6;
+  }
+  .item-25 {
+    grid-column: 6 / 7;
+    grid-row: 2 / 6;
+    border: 3px dashed darkcyan;
+  }
+  .item-27 {
+    grid-column: 3/6;
+    margin-left: 2rem;
+  }
 }
 
 /* petit PC portable mlg 1280px */
